--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
             <div class="block block-1"></div>
             <div class="block block-2"></div>
         </div>
+        <div class="row">
+            <div class="block block-3"></div>
+            <div class="block block-4"></div>
+            <div class="block block-5"></div>
+            <div class="block block-6"></div>
+            <div class="block block-7"></div>
+            <div class="block block-8"></div>
+        </div>
+        <div class="row">
+            <div class="block block-1"></div>
+            <div class="block block-2"></div>
+            <div class="block block-3"></div>
+            <div class="block block-4"></div>
+            <div class="block block-5"></div>
+            <div class="block block-6"></div>
+        </div>
     </div>
 
     <script>
